product/gradle-plugin/src/test/python/static_proxy/data/errors/syntax.py
from java import *

one two
